--- a/less/_page.less
+++ b/less/_page.less
@@ -25,15 +25,6 @@ body {
 	display: inline-block;
 }
 
-//set padding for elements
-.pg-dims {
-	width: @pg-width;
-	min-width: @pg-width-min;
-	max-width: @pg-width-max;
-
-	.clearfix;
-}
-
 .col {
 	padding: @col-top-padding @col-right-padding @col-bottom-padding @col-left-padding;
 	& + & {
